[gd_scene load_steps=9 format=3 uid="uid://bhww1e4srs600"]

[ext_resource type="Script" path="res://enemy_3d.gd" id="1_ies0g"]
[ext_resource type="PackedScene" uid="uid://djgm7e2voaxon" path="res://assets/models/vanguard_enemy/VanguardEnemy.gltf" id="2_8l6x2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qp6c0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vgot2"]
albedo_color = Color(1, 0.175247, 0.190204, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2p453"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ulmdo"]
radius = 8.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1x306"]
radius = 0.75

[sub_resource type="SphereShape3D" id="SphereShape3D_hn23e"]

[node name="enemy3d" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_ies0g")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_qp6c0")
surface_material_override/0 = SubResource("StandardMaterial3D_vgot2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_2p453")

[node name="AuxScene" parent="." instance=ExtResource("2_8l6x2")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="Skeleton3D" parent="AuxScene/Node" index="0"]
bones/0/position = Vector3(0.161336, 106.133, 1.01118)
bones/0/rotation = Quaternion(1.44064e-09, -9.05129e-09, 1.173e-06, 1)
bones/2/rotation = Quaternion(-0.0727557, 0.000109705, 0.00197235, 0.997348)
bones/4/rotation = Quaternion(0, 0, 0, 1)
bones/6/rotation = Quaternion(0.0727557, -0.000109554, -0.00197346, 0.997348)
bones/8/rotation = Quaternion(0.553197, -0.440424, 0.551385, 0.44269)
bones/10/rotation = Quaternion(-0.110766, -0.000226803, 0.00203794, 0.993844)
bones/12/rotation = Quaternion(-2.98023e-08, 9.75727e-08, -7.45058e-08, 1)
bones/14/rotation = Quaternion(5.3551e-08, -0.00130863, 4.80562e-07, 0.999999)
bones/16/rotation = Quaternion(0.218806, -0.0685787, -0.254609, 0.939465)
bones/18/rotation = Quaternion(-3.45568e-07, -8.40519e-08, 1.78448e-07, 1)
bones/20/rotation = Quaternion(-2.31778e-07, 1.0943e-08, -4.84902e-07, 1)
bones/24/rotation = Quaternion(-5.92284e-08, 4.65661e-10, -3.82204e-07, 1)
bones/26/rotation = Quaternion(-2.97736e-09, 2.93367e-08, 4.42208e-07, 1)
bones/28/rotation = Quaternion(-5.97695e-08, -2.96859e-08, 4.03715e-07, 1)
bones/32/rotation = Quaternion(5.95892e-08, 3.01516e-08, -3.02551e-07, 1)
bones/34/rotation = Quaternion(-5.85668e-08, 0, -2.09871e-07, 1)
bones/36/rotation = Quaternion(2.52991e-10, -2.98023e-08, 8.91474e-08, 1)
bones/40/rotation = Quaternion(4.07464e-10, 3.49246e-10, -4.05749e-07, 1)
bones/42/rotation = Quaternion(4.56552e-10, 1.49012e-08, -1.60292e-07, 1)
bones/44/rotation = Quaternion(-1.19097e-07, -2.94531e-08, 1.80666e-07, 1)
bones/48/rotation = Quaternion(-1.18194e-07, -7.40401e-08, -2.16202e-07, 1)
bones/50/rotation = Quaternion(6.09709e-08, -2.93367e-08, -1.21357e-07, 1)
bones/52/rotation = Quaternion(5.81734e-08, 1.04308e-07, 1.19108e-07, 1)
bones/56/rotation = Quaternion(0, 0, 0, 1)
bones/58/rotation = Quaternion(0, 0, 0, 1)
bones/62/rotation = Quaternion(0.553205, 0.440413, -0.551394, 0.442679)
bones/64/rotation = Quaternion(-0.110762, 0.000226788, -0.00203774, 0.993845)
bones/66/rotation = Quaternion(-5.52493e-08, -8.9407e-08, 5.96047e-08, 1)
bones/68/rotation = Quaternion(7.10716e-08, -1.16136e-06, -4.16301e-07, 1)
bones/70/rotation = Quaternion(2.70088e-07, 1.53668e-08, 1.90561e-07, 1)
bones/72/rotation = Quaternion(2.22695e-07, -4.42378e-08, 6.22666e-09, 1)
bones/74/rotation = Quaternion(3.72818e-07, 7.4273e-08, -5.67572e-07, 1)
bones/78/rotation = Quaternion(-2.71306e-07, 9.31323e-10, -8.82428e-08, 1)
bones/80/rotation = Quaternion(4.33021e-07, 5.96047e-08, 3.9814e-07, 1)
bones/82/rotation = Quaternion(-3.65604e-07, -1.49012e-08, -3.12626e-07, 1)
bones/86/rotation = Quaternion(0.218629, 0.0716917, 0.254761, 0.939233)
bones/88/rotation = Quaternion(2.55066e-07, 1.13461e-07, 6.19893e-08, 1)
bones/90/rotation = Quaternion(-1.59547e-07, -5.72763e-08, 3.82934e-08, 1)
bones/94/rotation = Quaternion(-2.83765e-07, 2.98023e-08, -1.87865e-07, 1)
bones/96/rotation = Quaternion(3.8456e-07, -8.9407e-08, -2.78963e-07, 1)
bones/98/rotation = Quaternion(2.16155e-07, 0, 6.12648e-08, 1)
bones/102/rotation = Quaternion(4.27459e-07, -5.9139e-08, -5.2116e-07, 1)
bones/104/rotation = Quaternion(-4.31485e-07, 0, 2.13988e-07, 1)
bones/106/rotation = Quaternion(3.87974e-07, 2.98023e-08, 1.6656e-07, 1)
bones/110/rotation = Quaternion(2.6077e-08, 0.0154389, 0.999881, 1.11759e-06)
bones/112/rotation = Quaternion(-0.0619219, -2.32831e-09, -1.86264e-09, 0.998081)
bones/114/rotation = Quaternion(0.450208, 0.0413766, -0.0519978, 0.890448)
bones/116/rotation = Quaternion(0.35487, 0.0338196, 0.00432078, 0.934294)
bones/120/rotation = Quaternion(2.23517e-08, 0.0154422, 0.999881, 1.11014e-06)
bones/122/rotation = Quaternion(-0.0619276, 4.65661e-09, -1.86265e-09, 0.998081)
bones/124/rotation = Quaternion(0.45021, -0.0413762, 0.0519993, 0.890447)
bones/126/rotation = Quaternion(0.354872, -0.0338185, -0.004324, 0.934293)

[node name="AnimationPlayer" parent="AuxScene" index="1"]
autoplay = "Idle"

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_ulmdo")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("CapsuleShape3D_1x306")

[node name="DamageArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.718291, 0)
shape = SubResource("SphereShape3D_hn23e")

[node name="WanderTimer" type="Timer" parent="."]

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]

[editable path="AuxScene"]
